@@ -26,7 +26,6 @@ import java.nio.file.Files;
 import java.nio.file.LinkOption;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.Objects;
 import org.apache.commons.io.file.PathUtils;
@@ -67,10 +66,10 @@ public class LocalFileSystemRepository implements BackupRepository {
     try {
       result = new URI(location);
       if (!result.isAbsolute()) {
-        result = Paths.get(location).toUri();
+        result = Path.of(location).toUri();
       }
     } catch (URISyntaxException ex) {
-      result = Paths.get(location).toUri();
+      result = Path.of(location).toUri();
     }
 
     return result;
@@ -80,7 +79,7 @@ public class LocalFileSystemRepository implements BackupRepository {
   public URI resolve(URI baseUri, String... pathComponents) {
     Preconditions.checkArgument(pathComponents.length > 0);
 
-    Path result = Paths.get(baseUri);
+    Path result = Path.of(baseUri);
     for (int i = 0; i < pathComponents.length; i++) {
       try {
         result = result.resolve(pathComponents[i]);
@@ -95,7 +94,7 @@ public class LocalFileSystemRepository implements BackupRepository {
 
   @Override
   public void createDirectory(URI path) throws IOException {
-    Path p = Paths.get(path);
+    Path p = Path.of(path);
     if (!Files.exists(p, LinkOption.NOFOLLOW_LINKS)) {
       Files.createDirectory(p);
     }
@@ -103,24 +102,24 @@ public class LocalFileSystemRepository implements BackupRepository {
 
   @Override
   public void deleteDirectory(URI path) throws IOException {
-    PathUtils.deleteDirectory(Paths.get(path));
+    PathUtils.deleteDirectory(Path.of(path));
   }
 
   @Override
   public boolean exists(URI path) throws IOException {
-    return Files.exists(Paths.get(path));
+    return Files.exists(Path.of(path));
   }
 
   @Override
   public IndexInput openInput(URI dirPath, String fileName, IOContext ctx) throws IOException {
-    try (FSDirectory dir = new NIOFSDirectory(Paths.get(dirPath), NoLockFactory.INSTANCE)) {
+    try (FSDirectory dir = new NIOFSDirectory(Path.of(dirPath), NoLockFactory.INSTANCE)) {
       return dir.openInput(fileName, ctx);
     }
   }
 
   @Override
   public OutputStream createOutput(URI path) throws IOException {
-    return Files.newOutputStream(Paths.get(path));
+    return Files.newOutputStream(Path.of(path));
   }
 
   @Override
@@ -131,21 +130,21 @@ public class LocalFileSystemRepository implements BackupRepository {
       return new String[0];
     }
 
-    try (FSDirectory dir = new NIOFSDirectory(Paths.get(dirPath), NoLockFactory.INSTANCE)) {
+    try (FSDirectory dir = new NIOFSDirectory(Path.of(dirPath), NoLockFactory.INSTANCE)) {
       return dir.listAll();
     }
   }
 
   @Override
   public PathType getPathType(URI path) throws IOException {
-    return Files.isDirectory(Paths.get(path)) ? PathType.DIRECTORY : PathType.FILE;
+    return Files.isDirectory(Path.of(path)) ? PathType.DIRECTORY : PathType.FILE;
   }
 
   @Override
   public void copyIndexFileFrom(
       Directory sourceDir, String sourceFileName, URI destDir, String destFileName)
       throws IOException {
-    try (FSDirectory dir = new NIOFSDirectory(Paths.get(destDir), NoLockFactory.INSTANCE)) {
+    try (FSDirectory dir = new NIOFSDirectory(Path.of(destDir), NoLockFactory.INSTANCE)) {
       copyIndexFileFrom(sourceDir, sourceFileName, dir, destFileName);
     }
   }
@@ -154,7 +153,7 @@ public class LocalFileSystemRepository implements BackupRepository {
   public void copyIndexFileTo(
       URI sourceDir, String sourceFileName, Directory dest, String destFileName)
       throws IOException {
-    try (FSDirectory dir = new NIOFSDirectory(Paths.get(sourceDir), NoLockFactory.INSTANCE)) {
+    try (FSDirectory dir = new NIOFSDirectory(Path.of(sourceDir), NoLockFactory.INSTANCE)) {
       dest.copyFrom(dir, sourceFileName, destFileName, DirectoryFactory.IOCONTEXT_NO_CACHE);
     }
   }
@@ -164,7 +163,7 @@ public class LocalFileSystemRepository implements BackupRepository {
       throws IOException {
     if (files.isEmpty()) return;
 
-    try (FSDirectory dir = new NIOFSDirectory(Paths.get(path), NoLockFactory.INSTANCE)) {
+    try (FSDirectory dir = new NIOFSDirectory(Path.of(path), NoLockFactory.INSTANCE)) {
       for (String file : files) {
         try {
           dir.deleteFile(file);
